--- a/1st Task/index.html
+++ b/1st Task/index.html
@@ -8,9 +8,9 @@
     <title>Form</title>
 </head>
 <body>
-    <h1>Survey Form</h1>
+    <h1 style="text-align: center;">Survey Form</h1>
     <div class="main">
-        <h2>Let Us know how we can improve Free</h2>
+        <h2 style="text-align: center;">Let Us know how we can improve Free</h2>
         <form action="" id="survey-form">
             <p id="description">Let us know how we can improve freeCodeCamp</p>
             <div class = "form-grid">
