--- a/5th Task/index.html
+++ b/5th Task/index.html
@@ -49,8 +49,8 @@
         <h1 class="heading2" style="margin-bottom: 60px; padding-top: 30px;">Contact</h1>
         <div style="align-content: center;">
             <a href="mailto:siddharthb1604@gmail.com"><img src="https://www.pngitem.com/pimgs/m/524-5244253_email-icon-black-and-white-png-download-mail.png" alt="" height="100px" width="130px"></a>
-            <a href="https://www.linkedin.com/in/siddharth-bhatnagar-1604/"><img src="https://www.pngitem.com/pimgs/m/465-4658501_font-linkedin-white-black-and-white-linkedin-logo.png" alt="" height="100px" width="130px" ></a>
-            <a href="https://github.com/htrahddis-hub"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="" height="100px" width="130px"></a>
+            <a href="https://www.linkedin.com/in/siddharth-bhatnagar-1604/"  target="_blank" ><img src="https://www.pngitem.com/pimgs/m/465-4658501_font-linkedin-white-black-and-white-linkedin-logo.png" alt="" height="100px" width="130px" ></a>
+            <a href="https://github.com/htrahddis-hub"  target="_blank" ><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="" height="100px" width="130px"></a>
         </div>
     </div>
 </body>
